<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_popup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A237E"
    tools:context="com.extremeplayer.quizme.PopupActivity">

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:textColor="#FFF"
        android:textSize="15sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/hye"
        style="@style/threeTextviews"
        android:layout_below="@+id/description"
        android:layout_marginBottom="35dp"
        android:text="@string/hye"
        android:textAllCaps="true"
        android:textColor="#FFF"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/design"
        style="@style/threeTextviews"
        android:layout_below="@+id/hye"
        android:layout_marginBottom="5dp"
        android:text="@string/Design"
        android:textColor="#FFF"
        android:textSize="20sp" />

    <TextView
        style="@style/threeTextviews"
        android:layout_below="@+id/design"
        android:text="@string/name"
        android:textAllCaps="true"
        android:textColor="#FF3D00"
        android:textSize="23sp"
        android:textStyle="bold" />

</RelativeLayout>
